<resources>
    <string name="app_name">Movie App Api And Design</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_new_account">Register new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="account_login">Account login</string>
    <string name="login">Login</string>
    <string name="login_with_google_account">Login with Google account</string>
    <string name="refresh">Refresh</string>
    <string name="not_internet">Not Internet</string>
    <string name="change_avatar">Change avatar</string>


    <string name="open">Open</string>
    <string name="close">Close</string>


    //

</resources>
